migrating script to new database

--- a/migrations/migrations_runner_notebook.ipynb
+++ b/migrations/migrations_runner_notebook.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "id": "7184c1b8",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,8 @@
     "DB_FILE = \"/Volumes/Public/Container_Settings/sqlpage/www/workouts.db\"\n",
     "\n",
     "# The directory where your .sql migration files are located.\n",
-    "MIGRATIONS_DIR = \"./\"  # Assumes the script/notebook is in the 'migrations' directory\n",
+    "# MIGRATIONS_DIR = \"./\"  # Assumes the script/notebook is in the 'migrations' directory\n",
+    "MIGRATIONS_DIR = \"/Volumes/Public/Container_Settings/sqlpage/migrations\"\n",
     "\n",
     "# The directory where backups will be stored.\n",
     "BACKUP_DIR = \"/Volumes/Public/Container_Settings/sqlpage/backups\""
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "id": "27b44b62",
    "metadata": {},
    "outputs": [],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "id": "e2a06181",
    "metadata": {},
    "outputs": [],
@@ -175,8 +176,8 @@
     "    \n",
     "    # Step 2: Find all .sql files in the directory\n",
     "    migration_files = sorted([\n",
-    "        f for f in os.listdir(MIGRATIONS_DIR) \n",
-    "        if f.endswith('.sql') and f != '000_migration_template.sql'\n",
+    "        f for f in os.listdir(MIGRATIONS_DIR)\n",
+    "        if f.endswith('.sql') and f != '000_migration_template.sql'        \n",
     "    ])\n",
     "\n",
     "    found_new_migration = False\n",
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "id": "39c3f6f0",
    "metadata": {},
    "outputs": [
@@ -232,13 +233,13 @@
      "output_type": "stream",
      "text": [
       "Starting migration process...\n",
-      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-02_194941.db...\n",
+      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-03_133729.db...\n",
       "Backup successful.\n",
       "\n",
-      "Applying migration: 010_restore_from_backup.sql...\n",
-      "Successfully applied 010_restore_from_backup.sql.\n",
-      "\n",
-      "Migration process finished.\n"
+      "Applying migration: 013_create_default_admin_user.sql...\n",
+      "!!!!!!!! ERROR applying 013_create_default_admin_user.sql !!!!!!!!\n",
+      "Error details: near \"(\": syntax error\n",
+      "Migration process halted. The database has been rolled back.\n"
      ]
     }
    ],
