--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "id": "a6ab8b50",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "id": "3725550f",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Loaded schema documentation for 1 tables.\n"
+      "✅ Loaded schema documentation for 0 tables.\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 8 tables: sessions, _migrations, DimUser, DimDate, DimExercise, DimUserExercisePreferences, DimExercisePlan, FactWorkoutHistory\n"
+      "✅ Found 8 tables: _migrations, dimUser, dimDate, dimExercise, dimUserExercisePreferences, dimExercisePlan, factWorkoutHistory, sessions\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "id": "e48b1acd",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -643,10 +643,10 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Database Schema Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Database Schema Report.md'\n",
       "\\nSaving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Database Schema Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Database Schema Report.md'\n"
      ]
     }
    ],
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "id": "1ff87f02",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 100,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -867,11 +867,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Folder Tree Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Folder Tree Report.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Folder Tree Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Folder Tree Report.md'\n"
      ]
     }
    ],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found and parsed documentation comments from 30 SQL files.\n"
+      "✅ Found and parsed documentation comments from 28 SQL files.\n"
      ]
     }
    ],
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 102,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 103,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -1086,11 +1086,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-02/2025-07-02 - SQLPage - Workout - SQL Comment Documentation.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-03/2025-07-03 - SQLPage - Workout - SQL Comment Documentation.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-02/2025-07-02 - SQLPage - Workout - SQL Comment Documentation.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-03/2025-07-03 - SQLPage - Workout - SQL Comment Documentation.md'\n"
      ]
     }
    ],
