progress models page series completed

--- a/migrations/migrations_runner_notebook.ipynb
+++ b/migrations/migrations_runner_notebook.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "7184c1b8",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "27b44b62",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "e2a06181",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "39c3f6f0",
    "metadata": {},
    "outputs": [
@@ -233,13 +233,13 @@
      "output_type": "stream",
      "text": [
       "Starting migration process...\n",
-      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-03_133729.db...\n",
+      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-04_140047.db...\n",
       "Backup successful.\n",
       "\n",
-      "Applying migration: 013_create_default_admin_user.sql...\n",
-      "!!!!!!!! ERROR applying 013_create_default_admin_user.sql !!!!!!!!\n",
-      "Error details: near \"(\": syntax error\n",
-      "Migration process halted. The database has been rolled back.\n"
+      "Applying migration: 013_add_progression_model_tables.sql...\n",
+      "Successfully applied 013_add_progression_model_tables.sql.\n",
+      "\n",
+      "Migration process finished.\n"
      ]
     }
    ],
