exercise library fixed

--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "a6ab8b50",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "3725550f",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 8 tables: _migrations, dimUser, dimDate, dimExercise, dimUserExercisePreferences, dimExercisePlan, factWorkoutHistory, sessions\n"
+      "✅ Found 10 tables: _migrations, dimUser, dimDate, dimExercise, dimUserExercisePreferences, dimExercisePlan, factWorkoutHistory, sessions, dimProgressionModel, dimProgressionModelStep\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "e48b1acd",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -643,10 +643,10 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Database Schema Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-05/2025-07-05 - SQLPage - Workout - Database Schema Report.md'\n",
       "\\nSaving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Database Schema Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-05/2025-07-05 - SQLPage - Workout - Database Schema Report.md'\n"
      ]
     }
    ],
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "1ff87f02",
    "metadata": {},
    "outputs": [
@@ -718,6 +718,7 @@
      "output_type": "stream",
      "text": [
       "Checking for schema drift (new tables or new columns)...\n",
+      "  -> Updating dimExercisePlan.yml with 1 new column(s).\n",
       "✨ Schema check complete.\n"
      ]
     }
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -858,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -867,11 +868,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Folder Tree Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-05/2025-07-05 - SQLPage - Workout - Folder Tree Report.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-03/2025-07-03 - SQLPage - Workout - Folder Tree Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-05/2025-07-05 - SQLPage - Workout - Folder Tree Report.md'\n"
      ]
     }
    ],
@@ -936,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -944,7 +945,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found and parsed documentation comments from 28 SQL files.\n"
+      "✅ Found and parsed documentation comments from 35 SQL files.\n"
      ]
     }
    ],
@@ -1003,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -1086,11 +1087,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-03/2025-07-03 - SQLPage - Workout - SQL Comment Documentation.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-05/2025-07-05 - SQLPage - Workout - SQL Comment Documentation.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-03/2025-07-03 - SQLPage - Workout - SQL Comment Documentation.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-05/2025-07-05 - SQLPage - Workout - SQL Comment Documentation.md'\n"
      ]
     }
    ],
