--- a/migrations/migrations_runner_notebook.ipynb
+++ b/migrations/migrations_runner_notebook.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "7184c1b8",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "27b44b62",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "e2a06181",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "39c3f6f0",
    "metadata": {},
    "outputs": [
@@ -233,11 +233,11 @@
      "output_type": "stream",
      "text": [
       "Starting migration process...\n",
-      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-06_194358.db...\n",
+      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-07_221434.db...\n",
       "Backup successful.\n",
       "\n",
-      "Applying migration: 018_separate_workout_templates.sql...\n",
-      "Successfully applied 018_separate_workout_templates.sql.\n",
+      "Applying migration: 019_create_modals_table.sql...\n",
+      "Successfully applied 019_create_modals_table.sql.\n",
       "\n",
       "Migration process finished.\n"
      ]
