--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 10 tables: _migrations, dimUser, dimDate, dimExercise, dimUserExercisePreferences, dimExercisePlan, factWorkoutHistory, sessions, dimProgressionModel, dimProgressionModelStep\n"
+      "✅ Found 11 tables: _migrations, dimUser, dimDate, dimExercise, dimUserExercisePreferences, dimExercisePlan, factWorkoutHistory, sessions, dimProgressionModel, dimProgressionModelStep, sqlpage_files\n"
      ]
     }
    ],
@@ -643,10 +643,10 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-06/2025-07-06 - SQLPage - Workout - Database Schema Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-09/2025-07-09 - SQLPage - Workout - Database Schema Report.md'\n",
       "\\nSaving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-06/2025-07-06 - SQLPage - Workout - Database Schema Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-09/2025-07-09 - SQLPage - Workout - Database Schema Report.md'\n"
      ]
     }
    ],
@@ -718,6 +718,8 @@
      "output_type": "stream",
      "text": [
       "Checking for schema drift (new tables or new columns)...\n",
+      "  -> Updating dimExercisePlan.yml with 2 new column(s).\n",
+      "  -> New table found! Creating placeholder file: sqlpage_files.yml\n",
       "✨ Schema check complete.\n"
      ]
     }
@@ -867,11 +869,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-06/2025-07-06 - SQLPage - Workout - Folder Tree Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-09/2025-07-09 - SQLPage - Workout - Folder Tree Report.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-06/2025-07-06 - SQLPage - Workout - Folder Tree Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-09/2025-07-09 - SQLPage - Workout - Folder Tree Report.md'\n"
      ]
     }
    ],
@@ -1086,11 +1088,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-06/2025-07-06 - SQLPage - Workout - SQL Comment Documentation.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-09/2025-07-09 - SQLPage - Workout - SQL Comment Documentation.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-06/2025-07-06 - SQLPage - Workout - SQL Comment Documentation.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-09/2025-07-09 - SQLPage - Workout - SQL Comment Documentation.md'\n"
      ]
     }
    ],
